# JetPack

./: .gitignore  README.md  Release_Notes  _data_map = setts.node_type_data_map  boot_mode_helper.py  instackenv.json  ocp-csah.ks  sanity_test.sh
BACK/: README  __init__.py  ceph.py  config.py  deployer.py  foreman.py  node_conf.py  settings.py
BACK/settings/: MHT_Black_settings.ini  (+5 more)
auto_common/: Scp.py  __init__.py  file_utils.py  ipmi.py  ssh.py  ui_helper.py  ui_manager.py
doc/: .gitignore  Dell_EMC_Ready_Architecture_for_RedHat_OpenStack_Platform_v13-Auto-Deploy-Guide_Dec4.docx  Dell_EMC_Red_Hat_Ready_Architecture_Deployment_Guide_Notes_v13.0.docx  Dell_Red_Hat-Cloud_Solutions_Documentation_Index.docx  Dell_Red_Hat-Cloud_Solutions_Release_Notes.docx  RHOSP-to-Ceph-Integration-Foreman.odt  architecture_guide.md  bonding-snippet.odt  dell-pilot-checklist.odt  dell-pilot-deploy.odt  dell-pilot-hostgroups-deploy.odt  dell-poc-checklist.odt  dell-poc-deploy.odt  dell-sah-ceph-deploy.odt  dell-sah-deploy.odt  dell-sah-foreman-deploy.odt  deployment_guide.md  deployment_guide_edits.html  dss9k_deployment_notes.md
hadoop_performance/: 13GapiTesting.py  13GapiTestingYARN.py  BaselineTest1_SF1.py  CheckDatanodeRoles.py  Cluster.py  DeleteHDFS.py  Fazal_report_builder.py  GangliaRunning.py  HIVEtesting.py  RAM5_baseline_test.py  ReportTester.py  SF10_RPC_1_512bs.py  SF1_RPC_1.py  SF1_RPC_1_best_settings.py  SF1_RPC_1_blksize1g.py  SF1_RPC_2.py  SF1_RPC_3.py  SF1_RPC_4.py  SF1_RPC_5.py  SF3_rerun.py  Tara  Terasort_job_id_testing.py  api_time_testing.py  auburntool.py  config.py  config_cdh5-orig.py  config_cdh5.py  config_cluster.py  config_reports.py  configureStamp.py  findJobTesting.py  graph2.php  max_containers.py  performance.php  performance_result.php  perftest2.py  perftest2_cdh5.py  perftest_cdh5.py  perftests.py  prepare_stamp.py  (+9 more)
kickstart/: director.ks  osp_sah.ks
network_performance/: MANIFEST.in  README.rst  README.txt  netperftest.py  netvaltest.py  run_all_tests.py  setup.py  unittests_netval.py
osp_deployer/: README  __init__.py  ceph.py  checkpoints.py  config.py  dateloghandler.py  dci.py  deployer.py  director.py  foreman.py  infra_host.py  logging.conf  node_conf.py  sah.py  settings.py  settings_sanity.py  test.py  testSubscriptionManager  tests.py
setup/: README  config.cfg  config.in  setup.sh  setup_usb_idrac.py
src/: .gitignore
src/pilot/discover_nodes/: README.rst  discover_nodes.py  requirements.txt  setup.cfg  setup.py
src/pilot/discover_nodes/discover_nodes/: __init__.py
src/pilot/discover_nodes/discover_nodes/dracclient/: __init__.py  client.py  exceptions.py  utils_additional.py
src/pilot/discover_nodes/discover_nodes/dracclient/resources/: __init__.py  idrac_card.py  job.py  lifecycle_controller.py  nic.py  system.py  uris.py
src/pilot/probe_idrac/: README.rst  dell_nfv.py  requirements.txt  setup.cfg  setup.py
src/pilot/probe_idrac/probe_idrac/: probe_idrac.py
templates/: dell-environment.yaml  wipe-disks.sh  wipe-disks.yaml
tests/: sanity_test.sh  sanity_test_longevity.sh
validation/: hci_sanity.ini  hci_sanity.sh
(+866 files in other folders)
