[metadata]
name = discover-nodes
summary = Utility for discovering nodes
description-file = README.rst
maintainer = Richard Pioso
maintainer_email = richard_pioso@dell.com
home-page = https://tbd
license = Apache-2
classifier =
    Development Status :: 3 - Alpha
    Environment :: OpenStack
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages =
    discover_nodes

[entry_points]
console_scripts =
    discover-nodes = discover_nodes.discover_nodes:main

[pbr]
warnerrors = True
